--- a/examples/filters.html
+++ b/examples/filters.html
@@ -20,7 +20,7 @@
 			var canvas = document.getElementById("canvas");
 			var videoContext = new VideoContext(canvas);
 
-			var videoNode = videoContext.createVideoSourceNode("../assets/introductions-rant.mp4", 0, 4, {volume:0.2, loop:true})
+			var videoNode = videoContext.createVideoSourceNode("../assets/introductions-rant.mp4", 0, 4, {volume:0.2, loop:true});
 			videoNode.startAt(0);
 			
 
@@ -77,7 +77,7 @@
     	<div class="pure-u-1-3"></div>
     	<div class="pure-u-1-3">
     		<h1>VideoContext</h1>
-    		<h2>Filter Example	</h2>
+    		<h2>Filter Example</h2>
 		    <p>
 		        <canvas id="canvas" width="480", height="270"></canvas>
 		    </p>
@@ -87,7 +87,7 @@
 
 				<button class="pure-button" id="filter-none">None</button>
 
-		        <canvas id="visualisation-canvas" width="390", height="20"></canvas>
+		        <canvas id="visualisation-canvas" width="480", height="20"></canvas>
     		</p>
     		<p>
         		<h3>Graph</h3>
