removed non-existant examples

--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
 			    <ul class="pure-menu-list">
 			        <li class="pure-menu-item"><a href="./examples/filters.html" class="pure-menu-link">Filters</a></li>
 			        <li class="pure-menu-item"><a href="./examples/transitions.html" class="pure-menu-link">Transitions</a></li>
-			        <li class="pure-menu-item"><a href="./examples/chromakey.html" class="pure-menu-link">ChromaKey</a></li>
-			        <li class="pure-menu-item"><a href="./examples/dynamicvideosequencing.html" class="pure-menu-link">Dynamic Video Sequencing</a></li>
-			        <li class="pure-menu-item"><a href="./examples/dashjs.html" class="pure-menu-link">Dash.JS</a></li>
+			        <!--<li class="pure-menu-item"><a href="./examples/chromakey.html" class="pure-menu-link">ChromaKey</a></li>
+			        <li class="pure-menu-item"><a href="./examples/dynamicvideosequencing.html" class="pure-menu-link">Dynamic Video Sequencing</a></li>-->
 			    </ul>
 			</div>
 
