--- a/examples/filters.html
+++ b/examples/filters.html
@@ -4,7 +4,8 @@
 	<title>VideoContext - Filter Example</title>
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script type="text/javascript" src="https://cdn.rawgit.com/bbc/VideoContext/master/dist/videocontext.js"></script>
+	<!-- <script type="text/javascript" src="https://cdn.rawgit.com/bbc/VideoContext/master/dist/videocontext.js"></script> -->
+	<script type="text/javascript" src="../dist/videocontext.js"></script>
 	<script type="text/javascript" src="../js/utils.js"></script>
 	<style type="text/css">
 	.credits,a {
