Small typo changes and regression asset restructure

--- a/test/regression/test-pages/effect-horizontalBlur.html
+++ b/test/regression/test-pages/effect-horizontalBlur.html
@@ -21,7 +21,7 @@
                  * Create source & effect nodes for the processing graph.
                  * N.B. Chromium only supports .webm video formats.
                  */
-                var videoNode = videoCtx.video("../assets/video/video1.webm");
+                var videoNode = videoCtx.video("../assets/video1.webm");
                 var horizontalBlurEffect = videoCtx.effect(VideoContext.DEFINITIONS.HORIZONTAL_BLUR);
 
                 videoNode.startAt(0);
