--- a/test/regression/test-pages/transition-horizontalWipe.html
+++ b/test/regression/test-pages/transition-horizontalWipe.html
@@ -21,8 +21,8 @@
                  * Create source & processing nodes for the processing graph.
                  * N.B. Chromium only supports .webm video formats.
                  */
-                var videoNode1 = videoCtx.video("../assets/video/video1.webm");
-                var videoNode2 = videoCtx.video("../assets/video/video2.webm");
+                var videoNode1 = videoCtx.video("../assets/video1.webm");
+                var videoNode2 = videoCtx.video("../assets/video2.webm");
                 var horizontalWipe = videoCtx.transition(VideoContext.DEFINITIONS.HORIZONTAL_WIPE);
 
                 // Setup start/stop times for video source nodes
