--- a/test/regression/test-pages/effect-opacity.html
+++ b/test/regression/test-pages/effect-opacity.html
@@ -21,7 +21,7 @@
                  * Create source & effect nodes for the processing graph.
                  * N.B. Chromium only supports .webm video formats.
                  */
-                var videoNode = videoCtx.video("../assets/video/video1.webm");
+                var videoNode = videoCtx.video("../assets/video1.webm");
                 var opacityEffect = videoCtx.effect(VideoContext.DEFINITIONS.OPACITY);
 
                 videoNode.startAt(0);
